--- a/index.html
+++ b/index.html
@@ -819,18 +819,18 @@
                 <div class="card">
                     <h3>Core Competencies</h3>
                     <ul>
-                        <li>Operational Excellence: System Design & Implementation, Process Automation, Efficiency Optimization, Project Coordination, Self-Management & Remote Work</li>
-                        <li>Analytical & Data-Driven: Analytical Problem-Solving, Data Analysis & Curation, Strategic Planning, Root Cause Analysis</li>
-                        <li>Leadership & Execution: Large-Scale Program Leadership, Executive Stakeholder Management, Resource Management, Resilience & Field Operations Management</li>
+                        <li><strong>Operational Excellence:</strong> System Design & Implementation, Process Automation, Efficiency Optimization, Project Coordination, Self-Management & Remote Work</li>
+                        <li><strong>Analytical & Data-Driven:</strong> Analytical Problem-Solving, Data Analysis & Curation, Strategic Planning, Root Cause Analysis</li>
+                        <li><strong>Leadership & Execution:</strong> Large-Scale Program Leadership, Executive Stakeholder Management, Resource Management, Resilience & Field Operations Management</li>
                     </ul>
                 </div>
                 <div class="card">
                     <h3>Tools & Technologies</h3>
                     <ul>
-                        <li>Advanced Data Processing & Automation: Microsoft Excel (Advanced functions, Macros/VBA, VLOOKUP, XLOOKUP, Power Query), Notion</li>
-                        <li>CRM Systems: Salesforce</li>
-                        <li>Data Sourcing & Research: LinkedIn Sales Navigator, various web scraping/mining tools</li>
-                        <li>Automation & AI (Exploratory): ChatGPT, Gemini (leveraged for process analysis, data insights, and automation ideation)</li>
+                        <li><strong>Advanced Data Processing & Automation:</strong> Microsoft Excel (Advanced functions, Macros/VBA, VLOOKUP, XLOOKUP, Power Query), Notion</li>
+                        <li><strong>CRM Systems:</strong> Salesforce</li>
+                        <li><strong>Data Sourcing & Research:</strong> LinkedIn Sales Navigator, various web scraping/mining tools</li>
+                        <li><strong>Automation & AI (Exploratory):</strong> ChatGPT, Gemini (leveraged for process analysis, data insights, and automation ideation)</li>
                     </ul>
                 </div>
             </div>
@@ -849,32 +849,32 @@
                     <div>
                         <h4>My Role & Responsibilities:</h4>
                         <ul>
-                            <li>Led a team of 40 data entry and verification specialists.</li>
-                            <li>Directed end-to-end data lifecycle: meticulous acquisition, structuring, editing, sorting, and integration.</li>
-                            <li>Designed and implemented rigorous quality control protocols for high-volume data entry and scanning.</li>
-                            <li>Pioneered solutions for difficult data remediation, including on-site verification and data updates in remote areas.</li>
-                            <li>Managed communications and provided regular updates to senior executives.</li>
+                            <li><strong>Program Leadership:</strong> Led a dedicated team of 40 candidates.</li>
+                            <li><strong>Process Design:</strong> Developed end-to-end methodologies for data gathering, cleaning, scanning, and digital entry.</li>
+                            <li><strong>Data Remediation:</strong> Conducted on-the-ground, house-to-house verification for outdated customer records and signatures.</li>
+                            <li><strong>Stakeholder Collaboration:</strong> Collaborated closely with executive leadership (Chairman, MD, DGM, EDP Chiefs, Regional/Chief Managers) for approvals and project updates.</li>
+                            <li><strong>Quality Assurance:</strong> Implemented rigorous checks to ensure high data accuracy and integrity.</li>
                         </ul>
                     </div>
                     <div>
                         <h4>My Solution & Actions Taken:</h4>
                         <ul>
-                            <li>**Strategic Planning & Program Execution:** Developed a comprehensive, nationwide rollout strategy for data conversion and system integration.</li>
-                            <li>**Innovative Data Remediation:** Devised and executed a unique field strategy to verify survival status and obtain updated signatures/photographs from customers with decades-old records.</li>
-                            <li>**Quality Assurance & Meticulous Data Handling:** Implemented stringent verification processes for signature scanning and data entry, ensuring zero-error rates for critical data points.</li>
-                            <li>**Proactive Problem Solving:** Addressed systemic issues like unclaimed deposits by identifying, structuring, organizing, and securing approvals to return approximately 450 Crores to original heirs.</li>
+                            <li><strong>Strategic Planning & Program Execution:</strong> Developed a comprehensive, nationwide rollout strategy for data conversion and system integration. Established clear guidelines and procedures for the team.</li>
+                            <li><strong>Innovative Data Remediation:</strong> Devised and executed a unique field strategy to verify survival status and obtain updated signatures/photographs from customers with decades-old records, ensuring data accuracy and compliance. (e.g., traveling to individual houses, enduring challenging conditions).</li>
+                            <li><strong>Quality Assurance & Meticulous Data Handling:</strong> Implemented stringent verification processes for signature scanning and data entry, ensuring zero-error rates for critical data points. Meticulously retrieved and processed data from challenging physical storage (snake/scorpion-filled cupboards).</li>
+                            <li><strong>Proactive Problem Solving:</strong> Addressed systemic issues like unclaimed deposits by identifying, structuring, organizing, and securing approvals to return approximately 450 Crores to original heirs.</li>
                         </ul>
                     </div>
                 </div>
-                <p class="tools">**Tools & Technologies Used:** Custom banking software, proprietary scanning solutions, various data entry tools, manual verification systems.</p>
+                <p class="tools"><strong>Tools & Technologies Used:</strong> Custom banking software, proprietary scanning solutions, various data entry tools, manual verification systems.</p>
                 <div class="results-box">
                     <h4>Results & Impact:</h4>
                     <ul>
-                        <li>**Accelerated Completion:** Completed the nationwide project by 2007, 5 years ahead of the 2012 deadline, enabling faster adoption of modern banking services.</li>
-                        <li>**Exceptional Data Accuracy:** Achieved 94% overall data accuracy across millions of records and 100% accuracy in signature scanning.</li>
-                        <li>**Significant Financial Recovery:** Identified and facilitated the return of approximately ₹450 Crores in unclaimed deposits.</li>
-                        <li>**Award Recognition:** Received the "1st Computerized State Bank of Hyderabad Award".</li>
-                        <li>**Scalability & Resilience:** Successfully managed and executed a project of unprecedented scale and complexity, demonstrating extreme resilience and adaptability in challenging field conditions.</li>
+                        <li><strong>Accelerated Completion:</strong> Completed the nationwide project by 2007, 5 years ahead of the 2012 deadline, enabling faster adoption of modern banking services.</li>
+                        <li><strong>Exceptional Data Accuracy:</strong> Achieved 94% overall data accuracy across millions of records and 100% accuracy in signature scanning, ensuring high data integrity for critical financial operations.</li>
+                        <li><strong>Significant Financial Recovery:</strong> Identified and facilitated the return of approximately ₹450 Crores in unclaimed deposits, demonstrating direct financial impact and regulatory compliance.</li>
+                        <li><strong>Award Recognition:</strong> Received the "1st Computerized State Bank of Hyderabad Award".</li>
+                        <li><strong>Scalability & Resilience:</strong> Successfully managed and executed a project of unprecedented scale and complexity, demonstrating extreme resilience and adaptability in challenging field conditions.</li>
                     </ul>
                 </div>
             </div>
@@ -894,22 +894,22 @@
                     <div>
                         <h4>My Solution & Actions Taken:</h4>
                         <ul>
-                            <li>**Analytical Problem Diagnosis:** Thoroughly analyzed existing manual data workflows to pinpoint critical bottlenecks and error points.</li>
-                            <li>**Hybrid Automation & Batching System:** Designed a robust system combining targeted manual review with powerful automation.</li>
-                            <li>**Intelligent Data Comparison:** Developed an advanced Excel-based system (VLOOKUP, XLOOKUP, custom macros) to match CRM records with fresh data from live websites.</li>
-                            <li>**Bulk Data Correction & Formatting:** Built specific Excel macros and leveraged formulas for bulk edits, standardization, and segmentation.</li>
-                            <li>**Efficiency Techniques:** Introduced 'chunking' (batching large tasks) and standardized copy-pasting protocols to minimize manual editing and errors.</li>
+                            <li><strong>Analytical Problem Diagnosis:</strong> Thoroughly analyzed existing manual data workflows to pinpoint critical bottlenecks and error points.</li>
+                            <li><strong>Hybrid Automation & Batching System:</strong> Designed a robust system combining targeted manual review with powerful automation.</li>
+                            <li><strong>Intelligent Data Comparison:</strong> Developed an advanced Excel-based system (VLOOKUP, XLOOKUP, custom macros) to match CRM records with fresh data from live websites.</li>
+                            <li><strong>Bulk Data Correction & Formatting:</strong> Built specific Excel macros and leveraged formulas for bulk edits, standardization, and segmentation.</li>
+                            <li><strong>Efficiency Techniques:</strong> Introduced 'chunking' (batching large tasks) and standardized copy-pasting protocols to minimize manual editing and errors.</li>
                         </ul>
                     </div>
                 </div>
-                <p class="tools">**Tools & Technologies Used:** Microsoft Excel (Advanced functions, VLOOKUP, XLOOKUP, VBA Macros), Salesforce, LinkedIn Sales Navigator, various web scraping tools, Notion.</p>
+                <p class="tools"><strong>Tools & Technologies Used:</strong> Microsoft Excel (Advanced functions, VLOOKUP, XLOOKUP, VBA Macros), Salesforce, LinkedIn Sales Navigator, various web scraping tools, Notion.</p>
                 <div class="results-box">
                     <h4>Results & Impact:</h4>
                     <ul>
-                        <li>**Significant Time Savings:** Reduced time spent on data updates and management by approximately 50%.</li>
-                        <li>**Dramatic Accuracy Improvement:** Led to a 10X reduction in data errors, ensuring correct recipient details for critical outreach.</li>
-                        <li>**Enhanced Sales Productivity:** Maintained clean, up-to-date, and consistently formatted CRM data, providing sales with a reliable stream of accurate leads.</li>
-                        <li>**Scalability:** Batching and automated correction processes made it feasible to efficiently manage and update thousands of contacts regularly.</li>
+                        <li><strong>Significant Time Savings:</strong> Reduced time spent on data updates and management by approximately 50%.</li>
+                        <li><strong>Dramatic Accuracy Improvement:</strong> Led to a 10X reduction in data errors, ensuring correct recipient details for critical outreach.</li>
+                        <li><strong>Enhanced Sales Productivity:</strong> Maintained clean, up-to-date, and consistently formatted CRM data, providing sales with a reliable stream of accurate leads.</li>
+                        <li><strong>Scalability:</strong> Batching and automated correction processes made it feasible to efficiently manage and update thousands of contacts regularly.</li>
                     </ul>
                 </div>
             </div>
@@ -928,14 +928,14 @@
                     <div>
                         <h4>My Solution & Actions Taken:</h4>
                         <ul>
-                            <li>**Entrepreneurial Expansion:** Secured a PM Rojgar Yojana loan to establish a photography and videography studio, then strategically expanded into a comprehensive Desktop Publishing (DTP) center.</li>
-                            <li>**Market-Driven Service Diversification:** Introduced services catering to academic and professional needs, including thesis preparation, project documentation, large-volume data typing, formatting, presentations, CV preparation, xerox, scanning, and internet access.</li>
-                            <li>**Operational Efficiency:** Managed diverse service lines, ensuring efficient workflows for high-volume data handling and document production.</li>
-                            <li>**IT Service & Maintenance:** Provided computer basic classes, system assembly, sales, and maintenance services, demonstrating practical IT and technical support capabilities.</li>
+                            <li><strong>Entrepreneurial Expansion:</strong> Secured a PM Rojgar Yojana loan to establish a photography and videography studio, then strategically expanded into a comprehensive Desktop Publishing (DTP) center.</li>
+                            <li><strong>Market-Driven Service Diversification:</strong> Introduced services catering to academic and professional needs, including thesis preparation, project documentation, large-volume data typing, formatting, presentations, CV preparation, xerox, scanning, and internet access.</li>
+                            <li><strong>Operational Efficiency:</strong> Managed diverse service lines, ensuring efficient workflows for high-volume data handling and document production.</li>
+                            <li><strong>IT Service & Maintenance:</strong> Provided computer basic classes, system assembly, sales, and maintenance services, demonstrating practical IT and technical support capabilities.</li>
                         </ul>
                     </div>
                 </div>
-                <p class="tools">**Tools & Technologies Used:** Photo and video cameras, studio equipment, DTP software, computers, printers, scanners.</p>
+                <p class="tools"><strong>Tools & Technologies Used:</strong> Photo and video cameras, studio equipment, DTP software, computers, printers, scanners.</p>
                 <div class="results-box">
                     <h4>Results & Impact:</h4>
                     <ul>
